[gd_scene load_steps=2 format=3 uid="uid://c50g4jec5817p"]

[ext_resource type="Script" uid="uid://ciete4x6ebpud" path="res://TextSectioner/section_outline.gd" id="1_jcku2"]

[node name="TestArena" type="Node2D"]

[node name="TextSection" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 500.0
offset_bottom = 625.0

[node name="SectionLabel" type="RichTextLabel" parent="TextSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -54.0
offset_right = 54.0
offset_bottom = 42.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 30
text = "banana pajama kablama"
fit_content = true
autowrap_mode = 0

[node name="SectionOutline" type="Control" parent="TextSection"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 44.0
grow_horizontal = 2
script = ExtResource("1_jcku2")

[connection signal="focus_entered" from="TextSection/SectionOutline" to="TextSection/SectionOutline" method="_on_focus_entered"]
[connection signal="mouse_entered" from="TextSection/SectionOutline" to="TextSection/SectionOutline" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextSection/SectionOutline" to="TextSection/SectionOutline" method="_on_mouse_exited"]
